; ModuleID = '/home/carl/AnghaBench/mpv/common/extr_playlist.c_playlist_entry_unref.c'
source_filename = "/home/carl/AnghaBench/mpv/common/extr_playlist.c_playlist_entry_unref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.playlist_entry = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @playlist_entry_unref(%struct.playlist_entry* %0) #0 {
  %2 = alloca %struct.playlist_entry*, align 8
  store %struct.playlist_entry* %0, %struct.playlist_entry** %2, align 8
  %3 = load %struct.playlist_entry*, %struct.playlist_entry** %2, align 8
  %4 = getelementptr inbounds %struct.playlist_entry, %struct.playlist_entry* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = add nsw i64 %5, -1
  store i64 %6, i64* %4, align 8
  %7 = load %struct.playlist_entry*, %struct.playlist_entry** %2, align 8
  %8 = getelementptr inbounds %struct.playlist_entry, %struct.playlist_entry* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp slt i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load %struct.playlist_entry*, %struct.playlist_entry** %2, align 8
  %13 = call i32 @talloc_free(%struct.playlist_entry* %12)
  br label %14

14:                                               ; preds = %11, %1
  ret void
}

declare dso_local i32 @talloc_free(%struct.playlist_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
